<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Series Manager</string>
    <string name="series_title">Title</string>
    <string name="credits">This app was developed by José Rafael Moraes</string>
    <string name="insert_data">Insert the title,season and episode of the new serie.</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="series">Series</string>
    <string name="confirm">Are you sure deleting it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="did_you_mean">Did you mean?</string>
    <string name="network_problem">Network problems, server is unavailable.</string>
    <string name="data_update">Updating data...</string>
    <string name="poster">Poster: </string>
    <string name="plot">Plot: </string>
    <string name="imdb">This app get info from www.imdb.com </string>
    <string name="year">Year: </string>
    <string name="rating">Rating: </string>
    <string name="votes">Votes: </string>
    <string name="director">Director: </string>
    <string name="writer">Writer: </string>
    <string name="released">Released: </string>
    <string name="genres">Genres: </string>
    <string name="last_update">Last Update: </string>
    <string name="actors">Actors: </string>
    <string name="runtime">Runtime: </string>
    <string name="automatic_change">Automatic increment</string>
    <string name="automatic_change_warning">If the database is not right, consider switching Automatic increment off.</string>
    <string name="last_season_episode">Last season/episode on database:</string>
    <string name="saving_changes">Saving Changes... </string>
    <string name="save_problem">Problems occured while trying to save.</string>
    <string name="share">Share </string>
    <string name="share1">I watched </string>
    <string name="share2">. Shared via Series Manager available on: </string>
</resources>
