<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:hint="@string/series_title" android:id="@+id/etTitle" android:layout_width="match_parent" android:layout_height="wrap_content"></EditText>
    
	<TextView android:layout_gravity="center" android:text="@string/season"  android:id="@+id/tvSeason" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    	
    <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="65dip" android:orientation="horizontal">
    
    	<Button android:id="@+id/btnMinusSeason" android:layout_width="65dip" android:layout_height="65dip" android:text = "-" ></Button>
    	<EditText  android:id="@+id/etSeason" android:inputType="number" android:layout_width="80dip" android:layout_height="wrap_content" android:text="0"></EditText>
    	<Button android:id="@+id/btnPlusSeason" android:layout_width="65dip" android:layout_height="65dip" android:text = "+"> </Button>
    	
    </LinearLayout>
	
	<TextView android:layout_gravity="center" android:text="@string/episode"  android:id="@+id/tvSeason" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    
	
	<LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="65dip" android:orientation="horizontal" >
    
    	<Button android:id="@+id/btnMinusEpisode" android:layout_width="65dip" android:layout_height="65dip" android:text = "-" ></Button>
    	<EditText  android:id="@+id/etEpisode" android:inputType="number" android:layout_width="80dip" android:layout_height="wrap_content" android:text="0" ></EditText>
    	<Button android:id="@+id/btnPlusEpisode" android:layout_width="65dip" android:layout_height="65dip" android:text = "+" ></Button>
    	
    </LinearLayout>
    
    <LinearLayout  android:gravity="center" android:layout_gravity="bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
    	<Button  android:id="@+id/btnTrash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/trash_btn" android:onClick="deleteSerie"></Button>
    </LinearLayout>
    
</LinearLayout>
